Fix icon default color on mobile and Fix add to bag z-index on mobile pdp

--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -35,6 +35,7 @@ $pdp-top: $header-height + $secondary-header-height;
 .product-section {
     position: relative;
     margin-bottom: 20px;
+    z-index: 6;
 }
 
 .sidebar {
